--- a/Intern/equipment.html
+++ b/Intern/equipment.html
@@ -21,6 +21,7 @@
 			</div>
 		</header>
 		<main>
+			2017/04/19
 			<div class="mainVisual">
 				<h1>CPUとGPU</h1>
 				計算力は必要であるが,GPUの並列計算が深層学習には向いている.
@@ -31,7 +32,19 @@
 				更新されるたびに学習しなおすと考えると,情報元→クラウド→pcのような動きは
 				時間が大量にかかってしまう恐れがあります.
 				クラウド上に,GPUがあれば処理を高速にできる可能性があります.
-			
+				頻繁に更新が必要なら,ローカルでやるべきなのか?
+				試しに値段の概算をしてみた.
+				<p>一般的なハイスペックデスクトップpcとだいたい同じスペックで週5日一日<strong>8時間</strong>借りた時と,
+				出来る限り高速で学習できるようなGPUで週5日一日<strong>2時間</strong>借りた時の料金</p>
+				使う時間が変えてあるのは,このスペックならこの時間での学習が可能であると考えられたため.
+				上のほうのスペックだと8時間では終わらない可能性もある.(その場合,その都度セーブすればいい)
+				<table border="1">
+					<th><td>VM Class</td><td>CPU Core</td><td>memory</td><td>GPU Type</td><td>Number of Gpu</td>
+					<td>SSD</td><td>location</td><td>hour/day</td><td>day/week</td><td>$/month</td></th>
+					<tr><td>Type1</td><td>Regular</td><td>8</td><td>32GB</td><td>NVIDIA Tesla K80</td><td>1</td><td>375GB</td><td>
+						Japan</td><td>8時間</td><td>5日</td><td>$245(26,729円)</td></tr>
+					<tr><td>Type2</td><td>Regular</td><td>8</td><td>32GB</td><td>NVIDIA Tesla K80</td><td>8</td><td>375GB</td>
+					<td>Japan</td><td>2時間</td><td>5日</td><td>$295(32,077円)</td></tr></table>
 				<h1>グラフィックボードのメーカー</h1>
 				グラボはいろいろなメーカーがグラフィックチップ(GPU)に冷却ファンなどを取り付けて発売しています.
 				深層学習を行うのであれば,グラフィックチップ(GPU)のメーカーはNVIDIA一択でしょう.
@@ -65,10 +78,19 @@
 				クラウド上で処理が実行できる利点としては,上でも説明したようにデータを集めてそのまま処理を行える点だとかんじる.
 				今回の場合,画像は実際に撮る＋ネットの画像になるのであれば現段階ではローカルのGPUを使うのがよいのでは?
 				将来的にはWebスクレイピングなども併せて,クラウドコンピューティングで学習させる方向でもよいと思う.
+				<h1>増設時の注意点</h1>
+				<h3>大きさ</h3>
+				高性能なグラボはケースに収まらない場合もある.
+				<h3>補助電源</h3>
+				電源供給の数,タイプなどが適切か.
+				電源コネクタが足りない場合,電源の買い替え,補助電源交換ケーブルが必要になる.
+				<h3>温度について</h3>
+				クーラー性能については,5分以上フルの負荷で稼働させた際75度以下になっていれば良いと言える.
+				ハイエンドGPUの場合(1080Tiなど)は水冷などの冷却方法も検討できる.
+				
 			</div>
 			<div class="globalNav">
 			</div>
-			<a href="register.html">sample</a>
 		</main>
 		<footer>
 			<aside id="sideBar">
