--- a/Intern/index.html
+++ b/Intern/index.html
@@ -27,6 +27,7 @@
                     <li><a href="equipment.html">必要なハードについて</a></li>
                     <li><a href="planning.html">計画</a></li>
                     <li><a href="#">勉強</a></li>
+					<li><a href="tensorflow/index.html">TensorFlow</a>
                     <li><a href="#">参考書籍</a></li>
 				</ul>
 			</div>
