--- a/Intern/tensorflow/CNN.html
+++ b/Intern/tensorflow/CNN.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <script type="text/javascript" src="../../js/syntaxhighlighter/scripts/shCore.js"></script>
     <script type="text/javascript" src="../../js/syntaxhighlighter/scripts/shBrushPowerShell.js"></script>
+    <script type="text/javascript" src="../../js/syntaxhighlighter/scripts/shBrushPython.js"></script>
     <link type="text/css" rel="stylesheet" href="../../js/syntaxhighlighter/styles/shCoreDefault.css">
     <link type="text/css" rel="stylesheet" href="../../js/syntaxhighlighter/styles/shCore.css">
     <script type="text/javascript">
@@ -31,21 +32,16 @@
             </div>
         </header>
         <main>
-            <div class="index_wrapper">
-                <div class="mainVisual">
-                <div id="index_first">
-                    <h4>TensorFlowの導入</h4>
-                    <li><a href="#">tensorflowについて</a>
-                    <li><a href="install.html">tensorflowのインストール</a>
-                    <li><a href="Develop.html">tensorflowでの開発準備</a>
-                </div>
-                <div id="index_develop">
-                    <h4>TensorFlowでの開発</h4>
-                    <li>CNNでの分類</li>
-                    <li>androidへの導入</li>
-                </div>
-                
-                </div>
+            2017/04/19
+            <div class="mainVisual">
+                <h3>畳み込みニューラルネットワークについて</h3>
+                <h5>pooling(プーリング層)</h5>
+                通常畳み込み層の直後に設置される.
+                特定の大きさの範囲でその中のある画素値を出力する.
+                <p>maxpooling:最大値を出力</p>
+                <p>averagepooling:平均プーリング</p>
+            </div>
+            <div class="globalNav">
             </div>
         </main>
         <footer>
